--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.16.2",
+    "next": "^14.2.32",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.16.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.19",
-    "postcss": "8.4.38",
-    "tailwindcss": "3.4.7",
-    "typescript": "5.4.5",
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
+    "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.7",
+    "typescript": "5.4.5"
   }
 }
